# game-compare-0x

./: .gitignore  .railpack.toml  .railpackrc  Caddyfile  Dockerfile  Procfile  RAILWAY_ENV_VARS.md  all_rust_files.txt  composer.json  debug_csv.php  debug_csv_last.php  debug_csv_quiet.php  debug_csv_small.php  docker-compose.test.yml  docker-compose.yml  error_log.txt  last_import_log.txt  nixpacks.toml  package-lock.json  package.json  phpunit.xml  ps_debug_full.php  ps_debug_jp.php  ps_discovery_debug.php  railpack.json  railway.toml  test-media-flush.php  vite.config.ts
rust/: Cargo.toml  extract_xbox_token.js  nexarda_product_catalogue.json.ndjson  package-lock.json  package.json
rust/azure_xbox_standalone/: Cargo.toml
rust/azure_xbox_standalone/src/: azure_token.rs  browse_collections.rs  browse_releases.rs  explore_api.rs  find_products.rs  genre_toplists.rs  xbox_store_prices.rs
rust/certs/: example.crt  example.csr  example.key  localhost.crt  localhost.key  microsoft  microsoft.pub  miscrosft.key
rust/docs/: acceptance_tests.sql  perf_query_pack.sql  performance_settings.sql  performance_tricks.sql  production_indexes.sql  schema_reference.sql  schema_types.ts  seed.sql  seed_snapshot.sql
rust/docs/laravel_migrations/: 2025_11_26_000001_create_product_versions_table.php  2025_11_26_000002_create_offer_regions_table.php  2025_11_26_000003_create_providers_tables.php  2025_11_26_000004_update_alerts_table.php
rust/docs/sql/: performance_settings.sql  schema.sql  schema_locked.sql  schema_optimized.sql
rust/docs/verification/: integrity_checks.sql
rust/entra-cert/: entra-private.key  entra-public.crt
rust/evaluation/: collect_responses.py
rust/exports/html/: steam_app_271590.html
rust/migrations/: 0001_full_consolidated_schema.sql  0001_full_consolidated_schema.sql.bak  0002_ingest_alignment.sql  0450_performance_bundle.sql  0460_analytics_aggregation_views.sql  0465_providers_kind.sql  0466_currencies_minor_unit.sql  0467_countries_code2.sql  0468_countries_iso_autofill.sql  0469_uniques_hardening.sql  0471_provider_ingest_runs.sql  0472_5_retailer_video_game_sources.sql  0473_provider_api_enhancements.sql  0474_provider_sync_states_uniques_and_indexes.sql  0475_credentials_security_rls.sql  0476_backfill_concurrent_indexes.sql  0477_concurrent_ingest_migration.sql  0478_rls_sweep.sql  0479_title_sources_uniques.sql  0480_current_price_agent_tiebreaker.sql  0481_game_images_extensions.sql  0482_platforms_canonicalization.sql  0483_media_kind_title.sql  0484_platforms_family_backfill_and_metrics.sql  0485_platforms_code_normalization.sql  0486_rls_and_cleanup.sql  0487_fix_sqlx_migrations_checksum.sql  0488_media_kind_title.sql  0489_decouple_titles_products.sql  0490_restore_software_title_link.sql  0491_video_games_by_title_view.sql  0492_catalog_enrichment.sql  0493_dedupe_core_uniques.sql  0494_media_staging_tables.sql  0495_game_media_legacy_refs.sql  0496_product_child_counts_and_platform_console_link.sql  0500_dedupe_video_titles_and_games.sql  0505_provider_media_links_provider_id.sql  0506_provider_media_links_unique.sql  0508_video_game_regional_prices.sql  (+53 more)
rust/migrations/archive/: 0002_partitions.sql.bak  0002_recent_indexes.sql.bak
rust/migrations_squashed/: 0200_extensions_enums.sql  0240_products.sql  0295_current_price.sql  0330_video_game_titles.sql  0350_game_consoles.sql  0360_game_images.sql  0370_game_videos.sql  0390_video_game_ratings_by_locale.sql  0400_video_game_title_sources.sql  0410_video_games_enriched_view.sql
rust/psstore_client/: cargo.toml  lib.rs  mod.rs
rust/psstore_client/src/: lib.rs  root.rs
rust/scripts/: convert_to_ndjson.py  generate_btc_price_exports.py  get_xsts.py  json_to_ndjson.py  ms_oauth_cache.py  msal.py  psstore_category_dump.zsh  xbox_tokens_device_code.py
rust/src/: env_boot.rs  lib.rs  main.rs  orchestrator.rs  realtime.rs  tracing.rs
(+613 files in other folders)
